syntax = "proto3";

package product;

service ProductService {
  rpc GetAllProducts (Empty) returns (GetAllProductsResponse);
  rpc GetProductBySlug (GetProductBySlugRequest) returns (ProductDetail);
  rpc GetProductsBySkuList (GetProductsRequest) returns (GetProductsResponse);
  rpc GetPaginatedProducts (GetPaginatedProductsRequest) returns (GetPaginatedProductsResponse);
}

message Empty {}

message GetAllProductsResponse {
  repeated ProductDetail products = 1;
}

message GetProductBySlugRequest {
  string slug = 1;
}

message GetProductsRequest {
  repeated ProductSkuInput items = 1;
}

message ProductSkuInput {
  int32 productId = 1;
  string skuNo = 2;
}

message GetPaginatedProductsRequest {
  int32 page = 1;   // Số trang hiện tại
  int32 limit = 2;  // Số sản phẩm trên mỗi trang
}

message GetPaginatedProductsResponse {
  repeated ProductDetail products = 1; // Danh sách sản phẩm
  int32 limit = 2;                     // Số sản phẩm trên mỗi trang
  int32 total = 3;                     // Tổng số sản phẩm
  int32 totalPages = 4;                // Tổng số trang
}


message ProductDetail {
  int32 productId = 1;                    // id
  string slug = 2;                        // slug
  string productName = 3;                 // name
  int32 sale_count = 4;                   // sale_count
  float price = 5;                        // price
  float discount_percentage = 6;          // discount_percentage
  string thumb = 7;                       // thumb
  float rating = 8;                       // rating
}

message GetProductsResponse {
  repeated ProductDetail products = 1;
}